completed base functionality for tip-calculator

--- a/src/app/tips-calculator/tips-calculator.component.html
+++ b/src/app/tips-calculator/tips-calculator.component.html
@@ -45,11 +45,9 @@
                     </div>
                 </div>
                 <div style="margin-top: 2vh;">
-                    <input 
-                        type="text"
-                        pInputText
+                    <p-inputNumber
                         [(ngModel)]="tip_rate"
-                        class="w-full mb-3"
+                        inputId="price"
                     />
                     <p-slider 
                         [min]="0"
