--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-tips-calculator/>
+<h1>Hello World!</h1>
+<p>Use either &lt;app-tips-calculator/&gt; or &lt;app-grocery-list/&gt; in place of Hello World!</p>
 <!-- worry about routing later -->
