--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 @import "primeng/resources/themes/arya-orange/theme.css";
 @import "primeng/resources/primeng.css";
 
+@import "primeicons/primeicons.css";
+
 * {
     margin: 0;
     padding: 0;
