--- a/src/app/grocery-list/grocery-list.component.html
+++ b/src/app/grocery-list/grocery-list.component.html
@@ -19,8 +19,8 @@
                     [checkmark]="true" 
                     [showClear]="true"
                     placeholder="Due Filter"
-                    />
-                    <p-multiSelect 
+                />
+                <p-multiSelect 
                     [style]="{marginBottom: '4vh'}"
                     [options]="tag_options" 
                     [(ngModel)]="tag_filters" 
@@ -28,20 +28,82 @@
                     [showClear]="true"
                     placeholder="Filter Tags" 
                 />
-                <div *ngFor="let item of filter(search(list))" class="vbox centered grocery-item">
-                    <div class="tags-container">
-                        <div *ngFor="let tag of item.tags"
-                            [class]="'tag ' + tag"
-                        >
-                            <p>{{tag}}</p>
+                <p-dropdown 
+                    [options]="sort_options" 
+                    [(ngModel)]="sort_selected" 
+                    [checkmark]="true" 
+                    [showClear]="true"
+                    placeholder="Sort"
+                />
+                <p-button 
+                    (click)="show_dialog()"
+                    label="Show"
+                />
+                <p-dialog 
+                    header="Add Item"
+                    draggable="false"
+                    [modal]="true"
+                    [(visible)]="add_to_list_dialog_visible"
+                    [style]="{ height: '80%', width: '50%' }"
+                >
+                    <div id="dialog">
+                        <label for="grocery_input">Grocery</label>
+                        <input 
+                            type="text"
+                            pInputText
+                            [(ngModel)]="temp_grocery"
+                            inputId="grocery_input"
+                            variant="outline"
+                        />
+                        <label for="assigned_input">Assigned</label>
+                        <input type="text" pInputText [(ngModel)]="temp_assigned" inputId="assigned_input" />
+                        <label for="quantity_input">Quantity</label>
+                        <p-inputNumber 
+                            [(ngModel)]="temp_quantity"
+                            [showButtons]="true"
+                            buttonLayout="horizontal"
+                            inputId="quantity_input"
+                            spinnerMode="horizontal"
+                            [step]="1"
+                            decrementButtonClass="p-button-secondary"
+                            incrementButtonClass="p-button-secondary" 
+                            incrementButtonIcon="pi pi-plus"
+                            decrementButtonIcon="pi pi-minus"
+                        />
+                        <label for="tags_input">Tags</label>
+                        <p-multiSelect 
+                            [options]="tag_options"
+                            [(ngModel)]="temp_tags"
+                            display="chip"
+                            [showClear]="true"
+                            placeholder="Tags"
+                            inputId="tags_input"
+                        />
+                        <label for="calendar-12h" class="font-bold block mb-2">Pick Up By</label>
+                        <p-calendar 
+                            inputId="calendar-12h" 
+                            [(ngModel)]="temp_due" 
+                            [showTime]="true" 
+                            [hourFormat]="'12'"
+                        />
+                        <div class="tags-container">
+                            <h1>{{temp_grocery}}</h1>
+                            <h4>quan. {{temp_quantity}}</h4>
+                            <!-- <p *ngIf="temp_due && temp_due.length === 1 && temp_due[0]">Needs to be picked up by: {{display_due(convert_js_date_to_luxon(temp_due[0]))}}</p> -->
+                            <!-- <p>Posted: {{display_date(this.temp_date)}}</p> -->
+                            <p *ngIf="temp_assigned">{{this.temp_assigned}}</p>
                         </div>
                     </div>
-                    <h1>{{item.grocery}}</h1>
-                    <h4>quan. {{item.quantity}}</h4>
-                    <p *ngIf="item.due !== null">Needs to be picked up by: {{display_due(item.due)}}</p>
-                    <p>Posted: {{display_date(item.date)}}</p>
-                    <p *ngIf="item.assigned !== null">{{item.assigned}}</p>
-                </div>
+                    <div class="flex justify-content-end gap-2">
+                        <p-button label="Cancel" severity="secondary" (click)="add_to_list_dialog_visible = false" />
+                        <p-button label="Save" (click)="add_to_list_dialog_visible = false" />
+                    </div>
+                </p-dialog>
+                <app-grocery-item 
+                    *ngFor="let grocery of search_filter_sort()"
+                    class="vbox centered grocery-item"
+                    [grocery]="grocery"
+                />
             </div>
         </div>
     </div>
