--- a/src/app/grocery-list/edit-creation-popup/edit-creation-popup.component.html
+++ b/src/app/grocery-list/edit-creation-popup/edit-creation-popup.component.html
@@ -40,23 +40,23 @@
             <div class="vbox">
                 <label for="tags_input">Tags</label>
                 <p-multiSelect 
-                    [options]="tag_options"
+                    [options]="grocery_list_service.get_tag_options()"
                     [(ngModel)]="temp_grocery.tags"
                     display="chip"
                     [showClear]="true"
                     placeholder="Tags"
                     inputId="tags_input"
-                    [style]="{width: '30%'}"
                 />
             </div>
             <div class="vbox">
                 <label for="calendar-12h" class="font-bold block mb-2">Pick Up By</label>
                 <p-calendar 
                     inputId="calendar-12h" 
-                    [(ngModel)]="temp_grocery.due" 
+                    [(ngModel)]="js_due_date"
+                    (ngModelChange)="update_temp_grocery_date()"
                     [showTime]="true" 
                     [hourFormat]="'12'"
-                    [style]="{width: '30%'}"
+                    [stepMinute]="15"
                 />
             </div>
             <div class="vbox">
@@ -65,12 +65,9 @@
             </div>
         </div>
     </div>
-    <!-- <app-grocery-item
-        [actions]="false"
-        [grocery]="temp_grocery"
-    /> -->
     <div class="flex justify-content-end gap-2">
-        <p-button label="Cancel" severity="secondary" (click)="on_exit()" />
-        <p-button label="Save" (click)="on_exit()" />
+        <p-button label="Cancel" severity="secondary" (click)="visible = false" />
+        <p-button label="Save" (click)="save()" />
     </div>
+    <app-grocery-item [grocery]="temp_grocery"/>
 </p-dialog>
