--- a/src/app/grocery-list/grocery-item/grocery-item.component.css
+++ b/src/app/grocery-list/grocery-item/grocery-item.component.css
@@ -9,6 +9,11 @@ div.grocery-item {
     padding: 1.3vh;
     padding-left: 1.5vw;
     padding-right: 1.5vw;
+    width: 100%
+}
+
+.fill-space {
+    flex: 1;
 }
 
 div.tags-container {
