--- a/src/styles.css
+++ b/src/styles.css
@@ -46,4 +46,6 @@ div.vbox {
 div.hbox {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
