--- a/src/app/grocery-list/edit-creation-popup/edit-creation-popup.component.html
+++ b/src/app/grocery-list/edit-creation-popup/edit-creation-popup.component.html
@@ -66,8 +66,8 @@
         </div>
     </div>
     <div class="flex justify-content-end gap-2">
-        <p-button label="Cancel" severity="secondary" (click)="visible = false" />
-        <p-button label="Save" (click)="save()" />
+        <p-button label="Cancel" styleClass="button" severity="secondary" (click)="visible = false" />
+        <p-button label="Save" styleClass="button" (click)="save()" />
     </div>
-    <app-grocery-item [grocery]="temp_grocery"/>
+    <app-grocery-item [grocery]="temp_grocery" [preview]="true"/>
 </p-dialog>
