--- a/src/app/grocery-list/grocery-item/grocery-item.component.html
+++ b/src/app/grocery-list/grocery-item/grocery-item.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="hbox">
             <div>
-                <h3>{{grocery.assigned ?? "Who will pick it up?"}}</h3>
+                <h3>{{(preview) ? grocery.assigned ?? "Who will pick it up?" : grocery.assigned ?? ""}}</h3>
                 <p *ngIf="grocery.due" class="date">{{grocery.due.toFormat("L/d/yy t")}}</p>
             </div>
         </div>
