styled grocery list

--- a/src/app/grocery-list/edit-creation-popup/edit-creation-popup.component.css
+++ b/src/app/grocery-list/edit-creation-popup/edit-creation-popup.component.css
@@ -9,3 +9,7 @@
 .p-multiselect {
     width: 30%;
 }
+
+::ng-deep input[pInputText].text {
+    font-size: 16px !important; /* Adjust font size for the input itself */
+}
