--- a/src/app/grocery-list/grocery-item/grocery-item.component.html
+++ b/src/app/grocery-list/grocery-item/grocery-item.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="hbox" style="align-items: baseline;">
                 <h1>{{(grocery.grocery) ? grocery.grocery : "Grocery"}}</h1>
-                <p *ngIf="grocery.quantity" class="quantity">{{'x' + grocery.quantity}}</p>
+                <p class="quantity">{{'x' + grocery.quantity + ' ' + grocery.units}}</p>
             </div>
         </div>
         <div class="hbox">
