--- a/src/styles.css
+++ b/src/styles.css
@@ -70,3 +70,44 @@ div.hbox {
 label {
     font-size: 36px;
 }
+
+/* DROPDOWN */
+
+.custom-dropdown .p-dropdown {
+    padding: 5px;
+}
+
+.custom-dropdown .p-dropdown-label {
+    font-size: 36px !important; /* Font for selected */
+    height: 40px;
+    line-height: 40px;
+}
+
+.custom-dropdown .p-dropdown-panel {
+    font-size: 36px !important; /* Font for dropdown */
+}
+
+.p-dropdown-item > span {
+    margin: 5px;
+}
+
+/* Checkboxes */
+
+.p-checkbox.p-component {
+    margin-right: 5px;
+}
+
+.p-checkbox-label {
+    font-size: 24px;
+}
+
+/* Input Text */
+
+input[pInputText].text {
+    border: 1px solid var(--primary-color);
+    border-radius: 3px;
+    padding: 5px;
+    height: 40px;
+    /* background-color: #121212; */
+    background-color: var(--surface-0)
+}
