routing from grocery-list to other projects

--- a/src/app/grocery-list/grocery-list.component.html
+++ b/src/app/grocery-list/grocery-list.component.html
@@ -2,6 +2,12 @@
     <div class="centered">
         <div class="card">
             <div class="centered vbox gap">
+                <div class="hbox gap">
+                    <a href="https://2024-internship.vercel.app/tips.html">Tip Calculator</a>
+                    <a href="https://first-zeal-voyage.vercel.app/">Grocery List</a>
+                    <a href="https://jacobgiboney.github.io/Web_App_Zeal_Intern/spRPS/secretproject.html">Rock Paper Scissors</a>
+                    <a href="https://2024-internship.vercel.app/weather.html">Weather Dashboard</a>
+                </div>
                 <h1 [style]="{fontSize: '48px'}">Grocery List</h1>
                 <div class="hbox" style="gap: 3vw; align-items: flex-start;">
                     <div class="vbox" style="flex: 1; gap: 3vh;">
