--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@
 
 @import "primeicons/primeicons.css";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
     margin: 0;
     padding: 0;
