made the wind component

--- a/src/app/weather/wind/wind.component.html
+++ b/src/app/weather/wind/wind.component.html
@@ -1,1 +1,8 @@
-<p>wind works!</p>
+<div class="flex justify-between items-center w-auto max-w-sm">
+    <div class="flex flex-col px-4 items-start">
+        <h2 class="text-xl font-semibold">Wind Speed:</h2>
+        <h3 class="text-lg">20mph</h3>
+        <h3 class="text-lg">316° NNW</h3>
+    </div>
+    <app-compass [size]="200"/>
+</div>
