--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <p>Use either &lt;app-tips-calculator/&gt; or &lt;app-grocery-list/&gt; in place of Hello World!</p> -->
 <!-- worry about routing later -->
 <app-grocery-list/>
+<div>Ryan</div>
