--- a/src/app/weather/wind/wind.component.html
+++ b/src/app/weather/wind/wind.component.html
@@ -1,8 +1,9 @@
-<div class="flex justify-between items-center w-auto max-w-sm">
-    <div class="flex flex-col px-4 items-start">
-        <h2 class="text-xl font-semibold">Wind Speed:</h2>
-        <h3 class="text-lg">20mph</h3>
-        <h3 class="text-lg">316° NNW</h3>
+<div class="flex w-auto max-w-m p-4 bg-white">
+    <div class="flex flex-col px-4 justify-start items-start mr-16 text-black">
+        <p class="text-xs">Windspeed</p>
+        <p class="text-4xl mt-6">20 mph</p>
+        <p class="text-xs mt-4 text-slate-500">316° NNW</p>
+        <p class="text-xs text-slate-500">+8 mph v 1 day ago</p>
     </div>
-    <app-compass [size]="200"/>
+    <app-compass [size]="150"/>
 </div>
