stashing progress, do not merge

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,1 +1,18 @@
-<p>weather works!</p>
+<!-- <div class="weather-container">
+    <input id="cityInput" type="text" [(ngModel)]="city" placeholder="Enter city" />
+    <button (click)="getWeather()">Get Weather</button>
+  
+    <div *ngIf="temperature !== null">
+      <p id="temperature">Temperature: {{ temperature }}°F</p>
+      <p id="temperaturehigh">High: {{ temperatureHigh }}°F</p>
+      <p id="temperaturelow">Low: {{ temperatureLow }}°F</p>
+      <p id="feelslike">Feels Like: {{ feelsLike }}°F</p>
+      <p id="outside">Humidity: {{ outsideHumidity }}%</p>
+      <p id="rain">Condition: {{ rainCondition }}</p>
+      <p id="sunrise">Sunrise: {{ sunriseTime }}</p>
+    </div>
+  
+    <div id="currentTime">Current Time: {{ currentTime }}</div>
+    <div id="clock">Clock: {{ clockTime }}</div>
+  </div> -->
+  
