--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,1 +1,16 @@
-<p>weather works!</p>
+<div class="flex flex-col flex-start items-center h-screen w-screen bg-cover bg-center" [style]="{
+    backgroundImage: 'url(https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fdata.1freewallpapers.com%2Fdownload%2Fsnowy-mountains-in-the-sunlight.jpg&f=1&nofb=1&ipt=4ddd4f4bcd6831f04259c015f9e945bb23209ab77a6a0619c229c422217a174a&ipo=images)'
+}">
+    <app-city-header/>
+    <div class="flex flex-row">
+        <div class="h-full">
+            <app-humidity/>
+        </div>
+        <div class="h-full">
+            <app-hi-lo/>
+        </div>
+        <div class="h-full">
+            <app-wind/>
+        </div>
+    </div>
+</div>
