--- a/src/app/weather/wind/wind.component.html
+++ b/src/app/weather/wind/wind.component.html
@@ -1,4 +1,4 @@
-<div class="flex w-auto max-w-m p-4 bg-white">
+<div class="flex w-auto min-w-80 p-4 blur-box h-full">
     <div class="flex flex-col px-4 justify-start items-start mr-16 text-black">
         <p class="text-xs">Windspeed</p>
         <p class="text-4xl mt-6">20 mph</p>
