styled weather temperature chart

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -13,4 +13,9 @@
             <app-wind/>
         </div>
     </div>
+    <div class="w-screen flex flex-row justify-center items-center mt-4">
+        <div class="w-5/12">
+            <app-temperature-chart/>
+        </div>
+    </div>
 </div>
