styling and positioning of weather dashboard

--- a/src/app/weather/city-header/city-header.component.html
+++ b/src/app/weather/city-header/city-header.component.html
@@ -1,4 +1,4 @@
-<div class="blur-box w-10/12 h-3/10 flex justify-end">
+<div class="blur-box flex flex-col justify-end h-48">
     <div class="p-4">
         <p class="text-xl font-extralight text-black">87° 1:15 pm</p>
         <p class="text-4xl font-bold text-black">Dallas, Texas</p>
