--- a/src/app/weather/hi-lo/hi-lo.component.html
+++ b/src/app/weather/hi-lo/hi-lo.component.html
@@ -10,7 +10,7 @@
     </div>
 </div> -->
 
-<div class="blur-box text-black p-4 w-80 rounded-md h-full">
+<div class="blur-box text-black p-4 rounded-md h-full">
     <p class="text-md font-extralight">High and Low</p>
     <p class="text-4xl mt-4 font-semibold">90° vs 70°</p>
 </div>
