--- a/src/app/weather/humidity/humidity.component.html
+++ b/src/app/weather/humidity/humidity.component.html
@@ -8,7 +8,7 @@
 </div> -->
 
 
-<div class="flex flex-col w-auto min-w-80 p-4 blur-box h-full">
+<div class="flex flex-col w-auto p-4 blur-box h-full">
     <p class="text-xs text-black">Humidity</p>
     <p class="text-4xl mt-6 text-black">71%</p>
 </div>
