--- a/src/app/weather/city-header/city-header.component.html
+++ b/src/app/weather/city-header/city-header.component.html
@@ -1,6 +1,14 @@
-<div class="blur-box flex flex-col justify-end h-48">
+<!-- <div class="blur-box flex flex-col justify-end h-48">
     <div class="p-4">
         <p class="text-xl font-extralight text-black">87° 1:15 pm</p>
         <p class="text-4xl font-bold text-black">Dallas, Texas</p>
     </div>
+</div> -->
+
+<div class="blur-box flex flex-row justify-between items-end h-48">
+    <div class="flex flex-col">
+        <p class="text-2xl text-black">1:13pm</p>
+        <p class="text-3xl text-black">{{city}}</p>
+    </div>
+    <p class="text-7xl font-bold text-black ml-auto">{{temperature}}°</p>
 </div>
