--- a/src/app/weather/hi-lo/hi-lo.component.html
+++ b/src/app/weather/hi-lo/hi-lo.component.html
@@ -10,7 +10,19 @@
     </div>
 </div> -->
 
-<div class="blur-box text-black p-4 rounded-md h-full">
+<!-- <div class="blur-box text-black p-4 rounded-md h-full">
     <p class="text-md font-extralight">High and Low</p>
     <p class="text-4xl mt-4 font-semibold">90° vs 70°</p>
+</div> -->
+
+<div class="blur-box text-black p-4 rounded-md h-full flex flex-row items-center justify-around">
+    <div>
+        <p class="text-xl mb-20">High and Low</p>
+        <p class="text-xs mt-2 text-slate-500"> The high increased 18°</p>
+        <p class="text-xs mt-0 text-slate-500"> The low increased 10°</p>
+    </div>
+    <div class="flex flex-col items-center">
+        <p class="text-5xl mb-3">↑ {{hi}}°</p>
+        <p class="text-5xl mt-8">↓ {{lo}}°</p>
+    </div>
 </div>
