--- a/src/app/weather/uv-index/uv-index.component.html
+++ b/src/app/weather/uv-index/uv-index.component.html
@@ -1,4 +1,5 @@
 <div class="blur-box text-black p-4 rounded-md h-full">
-    <p class="text-md font-extralight">UV Index</p>
-    <p class="text-4xl mt-4 font-semibold">8</p>
+    <p class="text-xl">UV Index ☼</p>
+    <p class="text-5xl mt-6">{{uv}}</p>
+    <p class="text-xs mt-2 text-slate-500">↑0.3 vs yesterday</p>
 </div>
