--- a/src/app/weather/wind/wind.component.html
+++ b/src/app/weather/wind/wind.component.html
@@ -5,5 +5,5 @@
         <p class="text-xs mt-4 text-slate-500">{{wind_direction}}° {{get_wind_direction(wind_direction)}}</p>
         <p class="text-xs text-slate-500">↓0.8 mph vs yesterday</p>
     </div>
-    <app-compass [size]="150" [wind_direction]="wind_direction" [wind_speed]="wind_speed"/>
+    <app-compass [size]="150"/>
 </div>
